objects/complaint__c.object
<CustomObject>
    <fields>
        <fullName>if_follow_up_what_type__c</fullName>
        <description>3500a Question H2.
2018.07.27 MT Changed to multi-select</description>
        <label>If Follow-up, What Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AdditionalInformationReport</fullName>
                    <label>Additional Information</label>
                </value>
                <value>
                    <fullName>CorrectionReport</fullName>
                    <label>Correction</label>
                </value>
                <value>
                    <fullName>DeviceEvaluationReport</fullName>
                    <label>Device Evaluation</label>
                </value>
                <value>
                    <fullName>ResponseToFDARequest</fullName>
                    <label>Response to FDA Request</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>initial_approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The initial approver for review.</inlineHelpText>
        <label>Initial Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaints_Approver</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>initial_reporter_also_sent_report_to_fda__c</fullName>
        <description>indicate if the initial reporter is the individual who submitted the report to the FDA</description>
        <label>Also Sent Report to FDA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                    <label>Yes</label>
                </value>
                <value>
                    <fullName>unknown</fullName>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>initial_reporter_user__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Initial Reporter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Complaints_Initial_Reporter</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>is_invalid__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set by CAN when a Complaint is invalid. See SAFBIO-2087.</description>
        <label>Complaint is Invalid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>is_locked__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether an complaint is locked by CAN submission job</description>
        <label>IsLocked</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>labeled_for_single_use__c</fullName>
        <defaultValue>true</defaultValue>
        <description>3500a Question H5.</description>
        <label>Labeled for Single Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>lesion_length__c</fullName>
        <description>VI Complaint form, in MM</description>
        <label>Lesion Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>lesion_location__c</fullName>
        <description>VI Complaint form, Options - Ostial, Proximal, Distal, Bifurcation, Other</description>
        <label>Lesion Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ostial</fullName>
                </value>
                <value>
                    <fullName>Proximal</fullName>
                </value>
                <value>
                    <fullName>Distal</fullName>
                </value>
                <value>
                    <fullName>Bifurcation</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>lesion_location_other__c</fullName>
        <description>VI Complaint form, Required if Other selected</description>
        <label>Lesion Location, Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>life_threatening_device_related__c</fullName>
        <description>VI Complaint form, Y/N</description>
        <label>Life Threatening, Device-related</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>location_where_event_occurred__c</fullName>
        <label>Location Where Event Occurred</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ambulatory Surgical Facility</fullName>
                </value>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Hospital</fullName>
                </value>
                <value>
                    <fullName>Nursing Home</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Outpatient Diagnostic Facility</fullName>
                </value>
                <value>
                    <fullName>Outpatient Treatment Facility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>manufacturer_compounder__c</fullName>
        <description>ACAMPBELL: Future proof for drug eluding stents. Do not include on page layout</description>
        <label>#1- Manufacturer/Compounder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdr_decision__c</fullName>
        <description>The outcome of the decision tree of the MDR Determination Guide will be auto populated here.</description>
        <label>MDR Decision</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>mdr_event_description__c</fullName>
        <description>3500a Question B5.  Event description sent to FDA.</description>
        <label>MDR Event Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>mdr_number__c</fullName>
        <description>Medical Device Reporting Number
1028232-YEAR-xxxxx
Annually the running number sequence starts from 00001. SFDC automatically generates next number in sequence.</description>
        <label>MDR Number</label>
        <length>23</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>mdr_report_date__c</fullName>
        <description>Date of MDR report</description>
        <label>MDR Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>name_and_strength__c</fullName>
        <description>ACAMPBELL: Future proof for drug eluding stents. Do not include on page layout</description>
        <label>#1-Name and Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ndc_or_unique_id__c</fullName>
        <description>ACAMPBELL: Future proof for drug eluding stents. Do not include on page layout</description>
        <label>#1- NDC # or Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>operator_of_device__c</fullName>
        <description>3500a Question D5.</description>
        <label>Operator of Device</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health Professional</fullName>
                </value>
                <value>
                    <fullName>Lay User/Patient</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>operator_of_device_other__c</fullName>
        <description>3500a Question D5.  Option to add other operator of device.</description>
        <label>Operator of Device, Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>other_location__c</fullName>
        <label>Other Location</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>out_of_service_date__c</fullName>
        <label>Out of Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>outcome_attributed_to_adverse_event__c</fullName>
        <description>3500a Question B2.</description>
        <label>Outcome Attributed to Adverse Event</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CongenitalAnomaly</fullName>
                    <label>Congenital Anomaly/Birth Defects</label>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                    <label>Disability or Permanent Damage</label>
                </value>
                <value>
                    <fullName>Hospitalization</fullName>
                    <label>Hospitalization - initial or prolonged</label>
                </value>
                <value>
                    <fullName>Impairment</fullName>
                    <label>Impairment/Damage (Devices)</label>
                </value>
                <value>
                    <fullName>LifeThreatening</fullName>
                    <label>Life Threatening</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <label>Other serious (Important Medical Events)</label>
                </value>
                <value>
                    <fullName>RequiredIntervention</fullName>
                    <label>Required Intervention to Prevent Permanent</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>owned_by_queue__c</fullName>
        <formula>IF(
LEFT(OwnerId, 3) = &quot;005&quot;,
False,
True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owned by Queue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>patient_code_global__c</fullName>
        <description>3500a Question H6.  Standard codes provided by FDA indicating effect on patient.</description>
        <label>Patient Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>patient_code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>patient_identifier__c</fullName>
        <defaultValue>&apos;01&apos;</defaultValue>
        <description>3500a Question A1.  Generic patient identifier.  This number is always 01, but should be editable.</description>
        <label>Patient Identifier</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>patient_injury__c</fullName>
        <description>VI Complaint form</description>
        <label>Patient Injury</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>patient_injury_comment__c</fullName>
        <description>VI Complaint form</description>
        <label>Patient Injury, Comment</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>patient_outcome__c</fullName>
        <description>VI Complaint form</description>
        <label>Patient Outcome</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Disability or Permanent Damage</fullName>
                </value>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Hospitalization Prolonged</fullName>
                </value>
                <value>
                    <fullName>Discharged Home</fullName>
                </value>
                <value>
                    <fullName>Life Threatening</fullName>
                </value>
                <value>
                    <fullName>Required Intervention to Prevent Permanent Damage</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>patient_outcome_comment__c</fullName>
        <description>VI Complaint form, free form</description>
        <label>Patient Outcome, Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>patient_weight__c</fullName>
        <formula>case__r.Contact.patient_weight__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pma_510k__c</fullName>
        <description>3500a Question G5.  Post Market Approval number provided by FDA</description>
        <label>PMA/510k #</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pre_dilation__c</fullName>
        <description>VI Complaint form, Options - yes, no, unknown</description>
        <label>Pre-dilation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
                <value>
                    <fullName>unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>procode__c</fullName>
        <description>3500a Question D2b.  Industry standard product code provided by FDA.</description>
        <label>Procode</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>product_problem__c</fullName>
        <defaultValue>false</defaultValue>
        <description>3500a Question B1.</description>
        <label>Product Problem</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>race__c</fullName>
        <description>Patient Race</description>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>American Indian or Alaskan Native</fullName>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>remedial_action_type__c</fullName>
        <label>Remedial Action Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Inspection</fullName>
                </value>
                <value>
                    <fullName>Modification/Adjustment</fullName>
                </value>
                <value>
                    <fullName>Notification</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Patient Monitoring</fullName>
                </value>
                <value>
                    <fullName>Recall</fullName>
                </value>
                <value>
                    <fullName>Relabeling</fullName>
                </value>
                <value>
                    <fullName>Repair</fullName>
                </value>
                <value>
                    <fullName>Replace</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>remedial_action_type_other__c</fullName>
        <label>Remedial Action Type, Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>report_date__c</fullName>
        <description>3500a Question B4.  Date the MDR team found out about the complaint (awareness date).</description>
        <label>Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>report_source__c</fullName>
        <description>3500a Question G3.</description>
        <label>Report Source</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CompanyRepresentative</fullName>
                    <label>Company Representative</label>
                </value>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Distributor</fullName>
                </value>
                <value>
                    <fullName>Foreign</fullName>
                </value>
                <value>
                    <fullName>HealthProfessional</fullName>
                    <label>Health Professional</label>
                </value>
                <value>
                    <fullName>Literature</fullName>
                </value>
                <value>
                    <fullName>Study</fullName>
                </value>
                <value>
                    <fullName>UserFacility</fullName>
                    <label>User Facility</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>ClinicalStudy</fullName>
                    <isActive>false</isActive>
                    <label>Clinical Study</label>
                </value>
                <value>
                    <fullName>Nurse</fullName>
                    <isActive>false</isActive>
                    <label>Nurse</label>
                </value>
                <value>
                    <fullName>Patient</fullName>
                    <isActive>false</isActive>
                    <label>Patient</label>
                </value>
                <value>
                    <fullName>Physician</fullName>
                    <isActive>false</isActive>
                    <label>Physician</label>
                </value>
                <value>
                    <fullName>Social Media</fullName>
                    <isActive>false</isActive>
                    <label>Social Media</label>
                </value>
                <value>
                    <fullName>Unidentified Caller</fullName>
                    <isActive>false</isActive>
                    <label>Unidentified Caller</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>report_type_timing__c</fullName>
        <description>Report Type is about timing e.g. whether the report needs to be sent in 5 day, 15 days, etc.</description>
        <label>Report Type (timing)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>5 Day</fullName>
                </value>
                <value>
                    <fullName>7 Day</fullName>
                </value>
                <value>
                    <fullName>10 Day</fullName>
                </value>
                <value>
                    <fullName>15 Day</fullName>
                </value>
                <value>
                    <fullName>30 Day</fullName>
                </value>
                <value>
                    <fullName>Periodic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>required_intervention_device_related__c</fullName>
        <description>VI Complaint form, Y/N</description>
        <label>Required Intervention, device related</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>yes</fullName>
                </value>
                <value>
                    <fullName>no</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>returned_to_manufacturer_on__c</fullName>
        <description>3500a Question D10. Date product returned to manufacturer.</description>
        <label>Returned to Manufacturer on</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>sap_company_code__c</fullName>
        <label>Company Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Company_Code</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>software_version__c</fullName>
        <label>Software Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>stenosis_degree__c</fullName>
        <description>Vi Complaint form, in %</description>
        <label>Stenosis Degree</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>tracking_number__c</fullName>
        <description>VI Complaint Form, Tracking  number for returned product</description>
        <label>Tracking Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>treated_vessel_segment__c</fullName>
        <description>VI Complaint form</description>
        <label>Treated Vessel, Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>type_of_report__c</fullName>
        <description>3500a Question G7.  Type of Report is whether it is the first report to the FDA, a follow-up report, etc</description>
        <label>Type of Report</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial</fullName>
                </value>
                <value>
                    <fullName>Follow up report</fullName>
                    <label>Follow Up Report</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>type_of_report_follow_up__c</fullName>
        <defaultValue>0</defaultValue>
        <description>3500a Question G7.
2018.07.30 MT added default value (0)</description>
        <label>Follow-up #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>type_of_reportable_event__c</fullName>
        <description>3500a Question H1.</description>
        <label>Type of Reportable Event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Death</fullName>
                </value>
                <value>
                    <fullName>Malfunction</fullName>
                </value>
                <value>
                    <fullName>SeriousInjury</fullName>
                    <label>Serious Injury</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>type_of_reportable_event_other__c</fullName>
        <label>Type of Reportable Event, Other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>udi__c</fullName>
        <description>Unique Device Identification made up of serial/batch number, UBD, and EAN. Required by FDA</description>
        <label>UDI</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>usage_of_device__c</fullName>
        <defaultValue>&apos;Initial&apos;</defaultValue>
        <description>3500a Question H8.</description>
        <label>Usage of Device</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>InitialUsage</fullName>
                    <label>Initial Use of Device</label>
                </value>
                <value>
                    <fullName>Reuse</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vessel_reference_diameter__c</fullName>
        <description>VI Complaint form, in MM</description>
        <inlineHelpText>in mm</inlineHelpText>
        <label>Vessel Reference Diameter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vessel_tortuosity__c</fullName>
        <description>VI Complaint form, Options - midle moderate, severe,</description>
        <label>Vessel Tortuosity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>mild</fullName>
                </value>
                <value>
                    <fullName>moderate</fullName>
                </value>
                <value>
                    <fullName>severe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>warranty_approval__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Visual indicator for users to identify if device related to event is approved by organization for warranty coverage</description>
        <label>Warranty Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>warranty_consideration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>check box noting that warranty consideration was requested on product</description>
        <label>Warranty Consideration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>was_device_reused__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Was a single-use device reused in another patient?</inlineHelpText>
        <label>Was Device Reused?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>x1_Lot__c</fullName>
        <description>ACAMPBELL: Future proof for drug eluding stents. Do not include on page layout</description>
        <label>#1- Lot #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>x2_Name_and_Strength__c</fullName>
        <description>ACAMPBELL: Future proof for drug eluding stents. Do not include on page layout</description>
        <label>#2- Name and Strength</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>x2_lot__c</fullName>
        <description>ACAMPBELL: Future proof for drug eluding stents. Do not include on page layout</description>
        <label>#2- Lot #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>x2_manufacturer_compounder__c</fullName>
        <description>ACAMPBELL: Future proof for drug eluding stents. Do not include on page layout</description>
        <label>#2- Manufacturer/Compounder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>x2_ndc_or_unique_id__c</fullName>
        <description>ACAMPBELL: Future proof for drug eluding stents. Do not include on page layout</description>
        <label>#2- NDC # or Unique ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Complaint</label>
    <listViews>
        <fullName>APS_Queue_complaint</fullName>
        <filterScope>Queue</filterScope>
        <label>APS Queue</label>
        <queue>APS_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Doctor_s_Letter_required</fullName>
        <columns>NAME</columns>
        <columns>case__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>approval_status__c</columns>
        <columns>date_of_event__c</columns>
        <columns>report_date__c</columns>
        <columns>asset__c</columns>
        <columns>ci_number__c</columns>
        <columns>mdr_number__c</columns>
        <columns>RP_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>doctors_letter_required__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>doctors_letter_sent_date__c</field>
            <operation>equals</operation>
        </filters>
        <label>Doctor&apos;s Letter Required &amp; Not Sent Yet</label>
        <sharedTo>
            <role>BINC_Medical_Device_Reporting</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MDR_Queue_complaint</fullName>
        <columns>NAME</columns>
        <columns>case__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>approval_status__c</columns>
        <columns>date_of_event__c</columns>
        <columns>asset__c</columns>
        <filterScope>Queue</filterScope>
        <label>MDR Queue</label>
        <queue>MDR_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Complaints</fullName>
        <columns>NAME</columns>
        <columns>case__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>asset__c</columns>
        <columns>asset_serial_number__c</columns>
        <columns>ci_number__c</columns>
        <columns>mdr_number__c</columns>
        <columns>RP_Number__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>approval_status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <label>My Open Complaints</label>
        <sharedTo>
            <role>BINC_Medical_Device_Reporting</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Open_OOS_Reports</fullName>
        <columns>NAME</columns>
        <columns>case__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>approval_status__c</columns>
        <columns>date_of_event__c</columns>
        <columns>report_date__c</columns>
        <columns>asset__c</columns>
        <columns>ci_number__c</columns>
        <columns>mdr_number__c</columns>
        <columns>RP_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>complaint__c.oos_report</value>
        </filters>
        <filters>
            <field>approval_status__c</field>
            <operation>equals</operation>
            <value>Not Submitted,Pending Peer Approval,Pending Manager Approval,Rejected</value>
        </filters>
        <label>Open OOS Reports</label>
        <sharedTo>
            <role>BINC_Medical_Device_Reporting</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ready_to_submit</fullName>
        <columns>NAME</columns>
        <columns>case__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>approval_status__c</columns>
        <columns>date_of_event__c</columns>
        <columns>report_date__c</columns>
        <columns>asset__c</columns>
        <columns>ci_number__c</columns>
        <columns>mdr_number__c</columns>
        <columns>RP_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Submit_to_Can__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>asset__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Ready to Submit to CAN</label>
    </listViews>
</CustomObject>